Drop maxDeliveries for maxRetries and unify, simplify handling of deliveryCount vs receiveCount and consistent checks of when a message should be processed and when it should be rejected.